--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,10 @@
 {
   "name": "backend",
   "private": true,
+  "dependencies": {
+    "json-server": "0.17.4"
+  },
   "scripts": {
-    "start": "npx json-server --watch db.json --port 10000"
+    "start": "node ./node_modules/json-server/lib/bin.js --watch db.json --port 10000"
   }
 }
