--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "json-server": "0.17.4"
   },
   "scripts": {
-    "start": "json-server --watch db.json --port 10000"
-  }
+  "start": "json-server --watch db.json --host 0.0.0.0 --port $PORT"
+}
+
 }
